# matrix-influx

./: .coverage  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: docker-publish.yml  integration-tests.yml  tests.yml
matrix_influx/: __init__.py  config.py  logger.py  matrix_to_influx.py  schema.py
src/: __init__.py  config.py  matrix_to_influx.py  schema.py
tests/: conftest.py  docker-compose.yml  test_config.py  test_logger.py  test_matrix_to_influx.py  test_matrix_to_postgres.py
tests/integration/: conftest.py  test_full_pipeline.py
