[project]
name = "matrix-to-influx"
version = "0.1.0"
description = "Matrix to InfluxDB bridge"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matrix-nio",
    "influxdb-client",
    "python-dotenv",
    "pydantic",
    "pydantic-settings",
    "pytest>=8.3.5",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-docker>=2.0.0",
    "aioresponses>=0.7.6"
]

integration = [
    "pytest-docker>=2.0.0",
    "docker"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --cov=src --cov-report=term-missing"
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (deselect with '-m 'not integration'')"
]
