[project]
name = "matrix-influx"
version = "0.1.0"
description = "Matrix to InfluxDB bridge"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "matrix-nio>=0.23.0",
    "psycopg[binary]>=3.1.12",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "SQLAlchemy>=2.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-docker>=2.0.0",
    "aioresponses>=0.7.6"
]

integration = [
    "pytest-docker>=2.0.0",
    "docker"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --cov=src --cov-report=term-missing"
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (deselect with '-m 'not integration'')"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
